--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,22 @@ version: 2
 jobs:
   build:
     docker:
-      - image: kemenaran/rgbds:0.4.0
+      - image: cimg/base:2020.01
     steps:
       - checkout
+      - run:
+          name: build rgbds
+          command: |
+            # Install build dependencies
+            sudo apt install -y build-essential byacc flex pkg-config libpng-dev
+
+            # Retrieve rgbds
+            git clone --depth 1 --branch v0.4.0 https://github.com/rednex/rgbds.git /tmp/rgbds
+
+            # Build rgbds
+            cd /tmp/rgbds
+            sudo make install
+
       - run:
           name: Building
           command: make build
