circleci config attempt 2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,13 +9,14 @@ jobs:
           name: build rgbds
           command: |
             # Install build dependencies
-            sudo apt install -y build-essential byacc flex pkg-config libpng-dev
+            sudo apt update && sudo install -y build-essential byacc flex pkg-config libpng-dev
 
             # Retrieve rgbds
             git clone --depth 1 --branch v0.4.0 https://github.com/rednex/rgbds.git /tmp/rgbds
 
             # Build rgbds
             cd /tmp/rgbds
+            sudo make
             sudo make install
 
       - run:
